--- a/MacrosManager/app/src/main/res/values/strings.xml
+++ b/MacrosManager/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="thirty_five_percent">35%</string>
     <string name="custom">Custom</string>
     <string name="percent">Percent</string>
-    <string name="fat_percent_explanation">13–18: Please stay in the 25–35% range for best results.\n\n19+: Please stay in the 20–35% range for best results.\n\nEnjoy any percentage regardless of what your current goal is as long as you stay within the suggested ranges.\n\nNote: Try to keep saturated fats under 10%.</string>
+    <string name="fat_percent_explanation">18: Please stay in the 25–35% range for best results.\n\n19+: Please stay in the 20–35% range for best results.\n\nEnjoy any percentage regardless of what your current goal is as long as you stay within the suggested ranges.\n\nNote: Try to keep saturated fats under 10%.</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="height_error">Height Error</string>
@@ -89,6 +89,17 @@
     <string name="no_thanks">No Thanks</string>
     <string name="birth_info_error">Birth Info Error</string>
     <string name="birth_info_error_description">Please choose a birth month and year.</string>
+    <string name="valid_email_error">Please enter a valid email.</string>
+    <string name="password_error">Please enter a password.</string>
+    <string name="password_confirm_error">Please enter confirm your password.</string>
+    <string name="password_match_error">Passwords do not match. Please try again.</string>
+    <string name="account_created">Account created successfully.</string>
+    <string name="account_creation_failed">Account creation failed. Please try again.</string>
+    <string name="firestore_save_data_error">Save Data Issue</string>
+    <string name="firestore_save_data_error_description">Some data was saved to your device, but not to your account. Please try to save again or try again later.</string>
+    <string name="retry">Retry</string>
+    <string name="macros_daily">$1%1/$1%2</string>
+    <string name="macros_daily_empty">-/-</string>
 
     <string name="admob_id">ca-app-pub-6601965971959563~1619744217</string>
 </resources>
