--- a/MacrosManager/app/src/main/res/values/strings.xml
+++ b/MacrosManager/app/src/main/res/values/strings.xml
@@ -112,6 +112,8 @@
     <string name="user_account_delete_error">There was an issue deleting your account. Please try again later.</string>
     <string name="login_failed">Login Failed</string>
     <string name="login_failed_description">Your login failed. Please try again later.</string>
+    <string name="add_meal">Add Meal</string>
+    <string name="edit_meal">Edit Meal</string>
 
     <string name="admob_id">ca-app-pub-6601965971959563~1619744217</string>
 </resources>
